force-app/main/default/objects/ND_Geo_Group_Region__c/ND_Geo_Group_Region__c.object-meta.xml
<CustomObject>
    <label>Geo Group Region</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geo Group Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>