force-app/main/default/objects/ND_Geo_Group_Region__c/fields/ND_Club_Region__c.field-meta.xml
<CustomField>
    <fullName>ND_Club_Region__c</fullName>
    <label>ND Club Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>