force-app/main/default/objects/ND_Geo_Group_Region__c/fields/Prospect_Region__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Region__c</fullName>
    <label>Prospect Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>